<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:elevation="5dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:gravity="center"
                android:text="@string/YOUR_ORDER"
                android:textColor="@color/braun"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_orders_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_order"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ORDER_TIME_AND_THANK_YOU"
            android:textSize="24sp"
            android:textColor="@color/braun"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="18dp"
            android:background="@drawable/shape_oval"
            android:backgroundTint="#CD000000"
            android:text="@string/PAY"
            android:textAllCaps="false"
            android:textColor="@color/beige"
            android:textSize="18sp" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>